<resources>
    <string name="app_name">Market</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="open_app">Open</string>
    <string name="Uninstall_app">Uninstall</string>
    <string name="InstallApp">Install</string>
    <string name="Zero">0</string>
    <string name="Comment">Comment</string>
    <string name="SubmitComment">submit</string>
    <string name="loginForm">Login to Account</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign up</string>
    <string name="SignupForm">Create Account</string>
    <string name="Username">Username</string>
    <string name="PasswordRetype">Re type Password</string>
    <string name="Signup">Sign up</string>
    <string name="loginTwo">Login to Account</string>
    <string name="SignOut">Sign out</string>
    <string name="category">Category</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="selectLanguage">Select Language</string>
    <string name="Developer">Developer :</string>
    <string name="myName">Amirhossein Poor emadi</string>
    <string name="DeveloperEmail">Developer Email :</string>
    <string name="amirhossein79_e_gmail_com">amirhossein79.e@gmail.com</string>
    <string name="ConnectionFailed">Connection Failed</string>
    <string name="SetStars">Minimum rating is one</string>
    <string name="NeedLogin">You need login to account</string>
    <string name="Retype">Password retype not match with password</string>
    <string name="LoginTrue">Welcome</string>
    <string name="LoginFailed">Email or password is incorrect</string>
    <string name="SignupTrue">Account created</string>
    <string name="SignupFailed">Email is invalid or duplicate</string>
    <string name="voice">ٰVoice Search</string>
    <string name="NetFailed">Connection to server failed</string>
    <string name="NetFailedMsg">please check network connection</string>
    <string name="NetSetting">Network Setting</string>
    <string name="filed">please fill all field</string>
    <string name="commentSubmitted">Comment submitted</string>
    <string name="noApp">No Application found in this category !</string>
    <string name="noSearch">No Result found for search</string>
    <string name="noComment">No Comment posted</string>

    <string-array name="lang">
        <item>Select Language</item>
        <item>English</item>
        <item>Persian</item>
    </string-array>



</resources>