<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.AppFragment"
    android:background="@color/md_grey_50">



    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp8"
        android:background="@color/md_white_1000"
        android:visibility="visible"
        android:layout_gravity="center">


        <ProgressBar
            android:layout_width="@dimen/dp64"
            android:layout_height="@dimen/dp64"
            android:theme="@style/Theme.MaterialComponents.Light"
            android:id="@+id/app_progress"
            android:visibility="gone"
            style="@style/Widget.AppCompat.ProgressBar">
        </ProgressBar>


    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6"
        android:layout_marginBottom="@dimen/dp72">



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/dp0">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp16">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp80"
                    android:layout_height="@dimen/dp80"
                    android:layout_alignParentStart="true"
                    android:id="@+id/app_image">
                </androidx.appcompat.widget.AppCompatImageView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/app_image"
                    android:layout_marginStart="@dimen/dp16"
                    android:layout_alignTop="@id/app_image"
                    android:layout_alignBottom="@id/app_image"
                    android:id="@+id/app_text"
                    style="@style/TextViewStyle"
                    android:gravity="center">
                </androidx.appcompat.widget.AppCompatTextView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/app_image"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/dp24"
                    android:gravity="center">


                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="@dimen/dp0"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp8"
                        android:layout_weight="1"
                        android:text="@string/open_app"
                        style="@style/ButtonStyle"
                        android:background="@drawable/ripple_effect"
                        android:visibility="gone"
                        android:id="@+id/btn_open">
                    </androidx.appcompat.widget.AppCompatButton>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="@dimen/dp0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/dp8"
                        android:text="@string/Uninstall_app"
                        android:background="@drawable/ripple_effect"
                        style="@style/ButtonStyle"
                        android:visibility="gone"
                        android:id="@+id/btn_delete">
                    </androidx.appcompat.widget.AppCompatButton>


                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="@dimen/dp0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/InstallApp"
                        android:background="@drawable/ripple_effect"
                        style="@style/ButtonStyle"
                        android:id="@+id/btn_install"
                        android:visibility="visible">
                    </androidx.appcompat.widget.AppCompatButton>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextViewStyle"
                        android:id="@+id/txt_progress"
                        android:layout_margin="@dimen/dp8"
                        android:visibility="gone">
                    </androidx.appcompat.widget.AppCompatTextView>


                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:id="@+id/download_progress"
                        android:visibility="gone">
                    </ProgressBar>


                </LinearLayout>


            </RelativeLayout>


        </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp88"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            android:layout_marginStart="@dimen/dp4"
            android:layout_marginEnd="@dimen/dp4">


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="@dimen/dp0"
                app:cardCornerRadius="@dimen/dp4"
                android:layout_margin="@dimen/dp4">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp32"
                    android:layout_height="@dimen/dp32"
                    app:srcCompat="@drawable/ic_money">
                </androidx.appcompat.widget.AppCompatImageView>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price_txt"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </androidx.appcompat.widget.AppCompatTextView>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="@dimen/dp0"
                app:cardCornerRadius="@dimen/dp4"
                android:layout_margin="@dimen/dp4">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp32"
                    android:layout_height="@dimen/dp32"
                    app:srcCompat="@drawable/ic_storage">
                </androidx.appcompat.widget.AppCompatImageView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/size_txt"
                    style="@style/TextViewStyle">
                </androidx.appcompat.widget.AppCompatTextView>


            </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardElevation="@dimen/dp0"
                app:cardCornerRadius="@dimen/dp4"
                android:layout_margin="@dimen/dp4">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp32"
                    android:layout_height="@dimen/dp32"
                    app:srcCompat="@drawable/ic_star">
                </androidx.appcompat.widget.AppCompatImageView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/star_txt"
                    style="@style/TextViewStyle"
                    android:text="@string/Zero">
                </androidx.appcompat.widget.AppCompatTextView>

            </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>




            <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp216"
            android:id="@+id/app_recycler">
        </androidx.recyclerview.widget.RecyclerView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            app:cardElevation="@dimen/dp0">

        <com.ms.square.android.expandabletextview.ExpandableTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:maxCollapsedLines="4"
            app:animDuration="300"
            android:id="@+id/app_short_text"
            android:layout_margin="@dimen/dp16">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/expandable_text"
                style="@style/TextViewStyle">
            </androidx.appcompat.widget.AppCompatTextView>


            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expand_collapse"
                android:layout_gravity="bottom|center"
                android:background="@color/transparent">
            </androidx.appcompat.widget.AppCompatImageButton>


        </com.ms.square.android.expandabletextview.ExpandableTextView>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginBottom="@dimen/dp8"
            app:cardElevation="@dimen/dp0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/dp8">


                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp56"
                    android:hint="@string/Comment"
                    android:id="@+id/user_comment"
                    android:background="@drawable/edt_shape"
                    android:padding="@dimen/dp8"
                    android:drawableEnd="@drawable/ic_comment"
                    android:drawablePadding="@dimen/dp4">
                </androidx.appcompat.widget.AppCompatEditText>



                <androidx.appcompat.widget.AppCompatRatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rating"
                    android:layout_marginTop="@dimen/dp16"
                    android:layout_marginBottom="@dimen/dp16">
                </androidx.appcompat.widget.AppCompatRatingBar>


                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SubmitComment"
                    android:id="@+id/submit"
                    android:background="@drawable/ripple_effect"
                    style="@style/ButtonStyle">
                </androidx.appcompat.widget.AppCompatButton>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/comment_recycler">
            </androidx.recyclerview.widget.RecyclerView>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewStyle"
            android:layout_gravity="center"
            android:id="@+id/txt_no_comment"
            android:text="@string/noComment"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dp8">
        </androidx.appcompat.widget.AppCompatTextView>


    </LinearLayout>



</FrameLayout>